# tornado-opt-backend

./: .env.example  AGENTS.md  Cargo.toml  NovaDecider.sol  README.md  TornadoOptV1.sol
abi/: TornadoOptV1.json
src/: env.rs  lib.rs  main.rs  merkle_tree.rs
src/circuits/: ivc.rs  mod.rs  withdraw.rs
src/cli/: checkpoint.rs  deposit.rs  mod.rs  withdrawal.rs
src/contracts/: calldata.rs  mod.rs  tornado.rs  utils.rs
src/notes/: mod.rs
src/state/: merkle_tree.rs  mod.rs  observer.rs
