[package]
name = "tornado-opt-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.30", features = ["rand"] }
ark-ff = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-crypto-primitives = { version = "0.5.0", features = ["crh"] }
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", rev = "fc91430", features = [
    "parallel",
    "light-test",
] }
ark-r1cs-std = { version = "0.5.0" }
anyhow = "1.0.99"
tower = "0.5.2"
reqwest = "0.12.23"
thiserror = "2.0.16"

[patch.crates-io]
ark-r1cs-std = { git = "https://github.com/yelhousni/r1cs-std", rev = "440ca3" }
