[package]
name = "tornado-opt-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.12.6", features = [
    "contract",
    "eips",
    "k256",
    "network",
    "provider-http",
    "provider-ws",
    "provider-ipc",
    "rpc-types",
    "signer-local",
] }
ark-ff = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-grumpkin = { version = "0.5.0" }
ark-crypto-primitives = { version = "0.5.0", features = ["crh"] }
folding-schemes = { git = "https://github.com/kbizikav/sonobe", branch = "eth-tokyo", features = [
    "parallel",
    "light-test",
] }
solidity-verifiers = { git = "https://github.com/kbizikav/sonobe", branch = "eth-tokyo" }
ark-groth16 = "0.5.0"
ark-ec = "0.5.0"
ark-relations = { version = "0.5.0" }
ark-r1cs-std = { version = "0.5.0" }
ark-std = { version = "0.5.0" }
anyhow = "1.0.99"
tower = "0.5.2"
reqwest = "0.12.23"
thiserror = "2.0.16"
rand = "0.8.5"
rust-crypto = { version = "0.2" }
envy = "0.4.2"
serde = { version = "1.0.221", features = ["derive"] }
dotenvy = "0.15.7"

[patch.crates-io]
ark-r1cs-std = { git = "https://github.com/yelhousni/r1cs-std", rev = "440ca3" }
